# dunmir

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yml
.github/workflows/: agent-ci.yml  agent-image.yml  frontend-ci.yml  release.yml  worker-ci.yml  worker-deploy.yml
agent/: pyproject.toml
agent/examples/: config.example.yaml
agent/tests/: test_config.py  test_inventory.py  test_managed_pipelines.py  test_remoteconfig.py  test_ssh.py
charts/mikrotik-minder-agent/: README.md  values.yaml
deploy/k8s/: README.md  (+6 more)
docs/: agent-protocol.md  rfc-control-plane-managed-config.md
frontend/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json
worker/: Dockerfile  README.md  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml  requirements-standalone.txt  requirements.txt  wrangler.toml
worker/migrations/: 0003_backup_files.sql  0010_saas_product_model.sql
worker/src/: app.py  auth.py  auth.ts  bodies.py  d1.py  deps.py  entry.py  env.py  env.ts  errors.py  ids.py  migrate.py  notify.py  notify.ts  outbound.py  pg.py  r2.py  scheduled.py  scheduled.ts  schema.py  server.py  storage_fs.py  stytch.py  stytch.ts  sweep.py  transfer.py
worker/src/routes/: admin.py  admin.ts  dashboard.ts  ingest.py  ingest.ts  read.ts  tenants.py
worker/test/: customer-auth.test.ts  git-remote.test.ts  tenancy.test.ts
worker/tests/: conftest.py  d1_shim.py  test_customer_auth.py  test_git_remote.py  test_pg_dialect.py  test_pg_integration.py  test_tenancy.py  test_transfer.py
(+17 files in other folders)
