[project]
name = "mikrotik-minder-worker"
version = "0.0.0"
description = "Mikrotik Minder control plane: heartbeat ingest, dead-man alerts, and the operator admin API on Cloudflare Python Workers (FastAPI) + D1 + R2."
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

[tool.pytest.ini_options]
# `src` on the path so tests import the app modules; `tests` holds the SQLite shim.
pythonpath = ["src", "tests"]
testpaths = ["tests"]
